--- a/style.css
+++ b/style.css
@@ -16,12 +16,14 @@ body {
 
 h1 {
   text-align: center;
+  color: white;
   font-size: 2.5rem;
   padding: 0.75rem 0.5rem;
   margin-bottom: 3rem;
 }
 h3 {
   text-align: center;
+  color: white;
 }
 .container {
   /* background-color: var(--primary-color); */
@@ -42,7 +44,7 @@ h3 {
   display: block;
   margin-top: 3rem;
   border-radius: 0.5rem;
-  color: black;
+  /* color:white; */
 }
 
 #gif {
